--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                <a href="#">Ler Mais</a>
         </div>
         <div class="card">
-            <div class="card-img" card-2></div>
+            <div class="card-img card-2"></div>
 
                 <h2>Estética Automotiva</h2>
                 <ul>
@@ -137,7 +137,7 @@
                 <a href="#">Ler Mais</a>
         </div>
         <div class="card">
-            <div class="card-img" card-3></div>
+            <div class="card-img card-3"></div>
                 <h2>Estofados</h2>
                 <ul>
                     <li>Higienização Sofá</li>
