Adicionado a Abstract IMG na file img,finalmente adicionado as formas abstratas na pag desk e mobile Full responsive

--- a/index.html
+++ b/index.html
@@ -102,9 +102,16 @@
 
     </section><!--Container Cards-->
 
-    <article><!--Agendamento-->
-        <a href="https://api.whatsapp.com/send?phone=5591984907736&text=Ol%C3%A1%2C%20tenho%20interesse%20em%20agendar%20um%20hor%C3%A1rio!">Agende Agora</a>
-    </article><!--Agendamento-->
+  <!--  <article>
+        
+        <a href="https://api.whatsapp.com/send?phone=5591984907736&text=
+        Ol%C3%A1%2C%20tenho%20interesse%20em%20agendar%20um%20hor%C3%A1rio!">
+            Agende Agora
+        </a>
+    
+    </article>-->
+
+    <div class="circulo"></div>
 
     <div class="titulo-sobre"><!--Titulo Sobre-->
         <h1>Nossos Serviços</h1>
@@ -147,10 +154,13 @@
                 <a href="#">Ler Mais</a>
         </div>
     </section>
-
+<!--
     <article>
-            <a href="https://api.whatsapp.com/send?phone=5591984907736&text=Ol%C3%A1%2C%20tenho%20interesse%20em%20agendar%20um%20hor%C3%A1rio!">Agende Agora</a>
-    </article>
+            <a href="https://api.whatsapp.com/send?phone=5591984907736&text=
+            Ol%C3%A1%2C%20tenho%20interesse%20em%20agendar%20um%20hor%C3%A1rio!">
+            Agende Agora
+        </a>
+    </article>-->
 
         <!--Informaçoes de contato, local e midias-->
     <section class="info">
