--- a/assets/html/Contato.html
+++ b/assets/html/Contato.html
@@ -16,7 +16,7 @@
     <nav class="nav-bar"><!--Nav Bar-->
         
         <div class="logo"><!--Logo-->
-            <a href="index.html"><img src="../img/jrcar2.png" alt="Logo"></a>
+            <a href="../../index.html"><img src="../img/jrcar2.png" alt="Logo"></a>
         </div><!--Final Logo-->
 
         <div class="login-btn"><!--Botão Login-->
@@ -35,21 +35,21 @@
         <div class="menu"><!--Menu Mobile-->
             <div class="menu-inner">
                 <ul>
-                    <li>Home</li>
-                    <li>Sobre</li>
-                    <li>Serviços</li>
-                    <li>Contato</li>
+                    <li><a href="../../index.html">Home</a></li>
+                    <li><a href="../../assets/html/Serviços.html">Serviços</a></li>
+                    <li><a href="../../assets/html/Sobre.html">Sobre</a></li>
+                    <li><a href="../../assets/html/Contato.html">Contato</a></li>
                 </ul>
             </div>
         </div>
 
         <div class="menu-bar-desktop"><!--Menu Desktop-->
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
-                <li class="login"><a href="./php/login.php">Login</a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../../assets/html/Serviços.html">Serviços</a></li>
+                <li><a href="../../assets/html/Sobre.html">Sobre</a></li>
+                <li><a href="../../assets/html/Contato.html">Contato</a></li>
+              <!--  <li class="login"><a href="./php/login.php">Login</a></li>-->
             </ul>
         </div>
     </nav><!--Final Nav Bar-->
