--- a/assets/html/Serviços.html
+++ b/assets/html/Serviços.html
@@ -108,9 +108,9 @@
                 <div class="menu-inner">
                     <ul>
                         <li><a href="../../index.html">Home</a></li>
-                        <li><a href="../html/Serviços.html">Serviços</a></li>
-                        <li><a href="..//html/Sobre.html">Sobre</a></li>
-                        <li><a href="../html/Contato.html">Contato</a></li>
+                        <li><a href="../../assets/html/Serviços.html">Serviços</a></li>
+                        <li><a href="../../assets/html/Sobre.html">Sobre</a></li>
+                        <li><a href="../../assets/html/Contato.html">Contato</a></li>
                     </ul>
                 </div>
             </div>
@@ -118,9 +118,9 @@
             <div class="menu-bar-desktop"><!--Menu Desktop-->
                 <ul class="menu">
                     <li><a href="../../index.html">Home</a></li>
-                    <li><a href="../html/Serviços.html">Serviços</a></li>
-                    <li><a href="../html/Sobre.html">Sobre</a></li>
-                    <li><a href="../html/Contato.html">Contato</a></li>
+                    <li><a href="../../assets/html/Serviços.html">Serviços</a></li>
+                    <li><a href="../../assets/html/Sobre.html">Sobre</a></li>
+                    <li><a href="../../assets/html/Contato.html">Contato</a></li>
                   <!--  <li class="login"><a href="./php/login.php">Login</a></li>-->
                 </ul>
             </div>
