Ajustando responsivo do circulo no main

--- a/assets/html/Serviços.html
+++ b/assets/html/Serviços.html
@@ -141,6 +141,11 @@
     </header><!--Container Header-->
 
     <main>
+        
+        <div id="titulo-servico">
+            <h2>Tratamento Externo</h2>
+        </div>
+
         <div class="container-card-services">
     
             <div class="box">
